--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-simplexml:2.8.1'
+
+    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha03"
 
     api 'com.google.guava:guava:28.2-jre'
 }
